# py-project

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  Makefile  README.docker.md  README.md  SECURITY.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 4bf02dfc1d87_create_user_table.py
api/app/: main.py
api/app/db/: deps.py  session.py
api/app/user/: model.py
