[project]
name = "py-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.117.1",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
